started complete cards view

--- a/UI/coven/pages/coven.html
+++ b/UI/coven/pages/coven.html
@@ -5,7 +5,9 @@
         <div id="menu"></div>
     </div>
     <div class="col-10" id="coven-main">
-
+        <div hx-get="/ui/generated-cards-view" hx-target="#generated-cards-view"
+            hx-swap="innerHTML" hx-trigger="load"></div>
+        <div id="generated-cards-view"></div>
     </div>
     <div hx-get="/ui/modal-window" hx-target="#modal-window-container"
         hx-swap="innerHTML" hx-trigger="load"></div>
