--- a/UI/coven/card_templates/character_card.html
+++ b/UI/coven/card_templates/character_card.html
@@ -1,5 +1,6 @@
-<div>
-    <div>
+<div class="card">
+    <img src="{{.ImgPath}}" class="card-bg">
+    <div class="card-content">
         <div>
             <h1>{{.Name}}</h1>
         </div>
@@ -10,9 +11,6 @@
         </div>
         <div>
             <p>{{.DecorationText}}</p>
-        </div>
-        <div>
-            <img src="{{.ImgPath}}">
         </div>
     </div>
 </div>
