--- a/UI/coven/card_templates/character_card.html
+++ b/UI/coven/card_templates/character_card.html
@@ -1,16 +1,3 @@
 <div class="card">
-    <img src="{{.ImgPath}}" class="card-bg">
-    <div class="card-content">
-        <div>
-            <h1>{{.Name}}</h1>
-        </div>
-        <div>
-            <h2>{{.Role}}</h2>
-        </div>
-        <div>
-        </div>
-        <div>
-            <p>{{.DecorationText}}</p>
-        </div>
-    </div>
+    <img src="{{.}}">
 </div>
