--- a/UI/coven/pages/coven.html
+++ b/UI/coven/pages/coven.html
@@ -1,13 +1,25 @@
+<form id="delete-card-form" hx-delete="/card" hx-trigger="deleteCardEvent"
+    hx-target="#deleteResponseTarget" hx-swap="innerHTML"
+    style="display: none;">
+    <input type="hidden" name="deleteCardType" id="deleteCardType" />
+    <input type="hidden" name="deleteCardName" id="deleteCardName" />
+</form>
+
 <div class="row">
     <div class="col-2">
         <div hx-get="/ui/main-menu" hx-target="#menu" hx-swap="innerHTML"
             hx-trigger="load"></div>
-        <div id="menu"></div>
+        <div id="menu" class="row ms-1"></div>
+        <div class="row mt-1">
+            <div id="deleteResponseTarget" class="col-12">
+            </div>
+        </div>
     </div>
     <div class="col-10" id="coven-main">
-        <div id="cards-view-root" hx-get="/ui/generated-cards-view" hx-target="#generated-cards-view"
-            hx-swap="innerHTML" hx-trigger="load, updateCards"></div>
-        <div id="generated-cards-view"></div>
+        <div id="cards-view-root" hx-get="/ui/generated-cards-view"
+            hx-target="#generated-cards-view" hx-swap="innerHTML"
+            hx-trigger="load, updateCards"></div>
+        <div id="generated-cards-view" class="row"></div>
     </div>
     <div hx-get="/ui/modal-window" hx-target="#modal-window-container"
         hx-swap="innerHTML" hx-trigger="load"></div>
